# peakdet

./: .cirrus.yml  Makefile  setup.cfg
.ci/: miniconda3  w_miniconda  w_python_39
peakdet/tests/: test_external.py
