[metadata]
description-file = README.rst

[flake8]
ignore = E402, W503

[coverage:run]
omit = peakdet/cli/*

[tool:pytest]
norecursedirs = peakdet/cli

[options]
python_requires = >=3.6.1
install_requires =
    numpy >=1.9.3, !=*rc*
    matplotlib >=3.1.1, !=3.3.0rc1
    PyYAML >=5.1, !=*rc*
tests_require =
    pytest >=5.3
test_suite = pytest¡
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
style =
    flake8 >=3.7
    flake8-docstrings >=1.5
test =
    pytest >=5.3
    pytest-cov
    %(style)s

[versioneer]
VCS = git
style = pep440
versionfile_source = peakdet/_version.py
versionfile_build = peakdet/_version.py
tag_prefix =
parentdir_prefix =
